--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,11 @@
 !!!
 html(ng-app="myApp")
-  head
-    meta(charset='utf8')
-    base(href='/')
-    title Angular Express Seed App
-    link(rel='stylesheet', href='/css/app.css')
-  body
-    block body
+	head
+		meta(charset='utf8')
+		base(href='/')
+		title Angular Express Seed App
+		link(rel='stylesheet', href='/css/app.css')
+		link(rel='stylesheet', href='/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/css/style.css')
+	body
+		block body
