--- a/views/products.jade
+++ b/views/products.jade
@@ -1,23 +1,23 @@
 extends layout
 
 block body
-  div(ng-controller='AppCtrl')
-    h2 Products Hello {{name}}
-    ul.menu
-      li
-        a(href='view1') view1
-      li
-        a(href='view2') view2
 
-    //-div(ng-view)
+	div(ng-controller='StoreController')
+		ul(class="list-group", style='width:600px', class="pull-center")
+			li(class="list-group-item", ng-repeat="product in products | orderBy:'price'")
+				h3(product-title)
+				section(product-gallery, ng-controller="GalleryController")
+				section(product-panels, ng-controller="PanelController")	
 
-    div
-      | Angular seed app: v
-      span(app-version)
+	//-div(ng-view)
 
-  script(src='js/lib/angular/angular.js')
-  script(src='js/app.js')
-  script(src='js/services.js')
-  script(src='js/controllers.js')
-  script(src='js/filters.js')
-  script(src='js/directives.js')
+	div
+		| Angular seed app: v
+		span(app-version)
+
+	script(src='js/lib/angular/angular.js')
+	script(src='js/app.js')
+	script(src='js/services.js')
+	script(src='js/controllers.js')
+	script(src='js/filters.js')
+	script(src='js/directives.js')
