--- a/views/admin.jade
+++ b/views/admin.jade
@@ -56,6 +56,8 @@ block body
 		span(app-version)
 
 	script(src='js/lib/angular/angular.js')
+	script(src='js/lib/angular/angular-resource.js')
+	script(src='js/lib/angular/angular-route.js')
 	script(src='js/app.js')
 	script(src='js/services.js')
 	script(src='js/controllers.js')
