--- a/views/partials/productCategory.jade
+++ b/views/partials/productCategory.jade
@@ -1,10 +1,11 @@
-div(ng-controller='StoreController')
+div(ng-controller='StoreControllerCategory')
 	a(href='products') All products > 
+	a(href='products/{{category}}') {{category}}
 	ul(class="list-group", style='width:600px', class="pull-center")
 		li(class="list-group-item", ng-repeat="product in products | orderBy:'price'")
 			h3(product-title)
 			section(product-gallery, ng-controller="GalleryController")
-			section(product-panels, ng-controller="PanelController")	
+			section(product-panels, ng-controller="PanelController")
 
 
 
