Uploading and deleting images

--- a/views/partials/product-gallery.jade
+++ b/views/partials/product-gallery.jade
@@ -1,7 +1,7 @@
 div(ng-show="product.images.length")
 	div(class="img-wrap")
-		img(ng-src="./images/gallerySize/{{product.images[current]}}")
+		img(ng-src="./images/{{product.images[current]}}", height="400px", width="500px")
 	ul(class="img-thumbnails clearfix")
 		li(class="small-image pull-left thumbnail", ng-repeat="image in product.images")
 			a(href ng-click="setCurrent($index)")
-				img(ng-src="./images/thumbs/{{image}}" )
+				img(ng-src="./images/{{image}}", height="100px", width="100px")
