--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,3 +14,11 @@ ul {
 	margin: 0 auto;
 }
 
+.ta-editor {
+    min-height: 300px;
+    height: auto;
+    overflow: auto;
+    font-family: inherit;
+    font-size: 100%;
+    margin:20px 0;
+}
