--- a/views/admin.jade
+++ b/views/admin.jade
@@ -11,6 +11,7 @@ block body
 							input(type="text", class="form-control input-lg text-center", placeholder="Name", ng-model="formCategory.name")
 							button(type="submit", class="btn btn-primary btn-lg", ng-click="addCategory()") Add
 
+
 					ul(class="list-group", style='width:600px', class="pull-center")
 						li(class="list-group-item", ng-repeat="category in categories")
 							{{category.name}}
@@ -76,11 +77,13 @@ block body
 						div(class="list-group-item", ng-repeat="image in product.images")
 							a(href class="pull-right", ng-click="deleteImage(product._id, image)") x <br>
 							{{image}} 
-							img(ng-src="./images/thumbs/{{image}}")	
+							img(ng-src="./images/{{image}}", height="100px", width="100px")	
 
 
-	//-div(ng-view)
+	div(class="container app")
+		div(text-angular="text-angular", name="htmlcontent", ng-model="htmlcontent", ta-disabled='disabled')
 
+	div(ta-bind="text", ng-model="htmlcontent", ta-readonly='disabled')
 	div
 		| Angular seed app: v
 		span(app-version)
@@ -88,8 +91,13 @@ block body
 	script(src='js/lib/angular/angular.js')
 	script(src='js/lib/angular/angular-resource.js')
 	script(src='js/lib/angular/angular-route.js')
+	script(src='js/lib/angular/textAngular.js')
+	script(src='js/lib/angular/textAngular-sanitize.js')
+	script(src='js/lib/angular/textAngularSetup.js')		
 	script(src='js/app.js')
 	script(src='js/services.js')
 	script(src='js/controllers.js')
 	script(src='js/filters.js')
 	script(src='js/directives.js')
+
+		
