--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html(ng-app="myApp")
 		link(rel='stylesheet', href='/css/app.css')
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
+		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
 	body
 		block body
