--- a/views/admin.jade
+++ b/views/admin.jade
@@ -80,10 +80,26 @@ block body
 							img(ng-src="./images/{{image}}", height="100px", width="100px")	
 
 
-	div(class="container app")
-		div(text-angular="text-angular", name="htmlcontent", ng-model="htmlcontent", ta-disabled='disabled')
 
-	div(ta-bind="text", ng-model="htmlcontent", ta-readonly='disabled')
+		div(class="form-group")
+			form
+				h3 Add Site 
+				input(type="text", class="form-control input-lg text-center", placeholder="Name", ng-model="formSite.title")
+				//input(type="text", class="form-control input-lg text-center", placeholder="Content", ng-model="formSite.content")
+				div(class="container app")
+					div(text-angular="text-angular", name="htmlcontent", ng-model="formSite.content", ta-disabled='disabled')
+				button(type="submit", class="btn btn-primary btn-lg", ng-click="addSite()") Add
+
+			ul(class="list-group", style='width:600px', class="pull-center")
+				li(class="list-group-item", ng-repeat="site in sites")
+					{{site.title}}
+					a(href class="pull-right", ng-click="deleteSite(site._id)") x <br>
+
+
+		//div(class="container app")
+			//div(text-angular="text-angular", name="htmlcontent", ng-model="htmlcontent", ta-disabled='disabled')
+
+		div(ta-bind="text", ng-model="htmlcontent", ta-readonly='disabled')
 	div
 		| Angular seed app: v
 		span(app-version)
