--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,9 @@ block body
       li
         a(href='products') All products
       li(ng-repeat="category in categories")
-        a(href='products/{{category.name}}') {{category.name}}      
+        a(href='products/{{category.name}}') {{category.name}}   
+      li(ng-repeat="site in sites")
+        a(href='site/{{site.title}}') {{site.title}}     
 
     div(ng-view) 
 
@@ -18,6 +20,9 @@ block body
   script(src='js/lib/angular/angular.js')
   script(src='js/lib/angular/angular-resource.js')
   script(src='js/lib/angular/angular-route.js')
+  script(src='js/lib/angular/textAngular.js')
+  script(src='js/lib/angular/textAngular-sanitize.js')
+  script(src='js/lib/angular/textAngularSetup.js')  
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
