--- a/views/admin.jade
+++ b/views/admin.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block body
-	div(ng-controller='StoreController')
+	div(ng-controller='AdminController')
 		div(class="row")
 			div(class="col-sm-8 col-sm-offset-2 text-center")
 				form
