--- a/views/partials/productCategory.jade
+++ b/views/partials/productCategory.jade
@@ -1,6 +1,6 @@
 div(ng-controller='StoreControllerCategory')
-	a(href='products') All products > 
-	a(href='products/{{category}}') {{category}}
+	a(href='products/show') All products > 
+	a(href='products/show/{{category}}') {{category}}
 	ul(class="list-group", style='width:600px', class="pull-center")
 		li(class="list-group-item", ng-repeat="product in products | orderBy:'price'")
 			h3(product-title)
