--- a/views/partials/products.jade
+++ b/views/partials/products.jade
@@ -1,5 +1,5 @@
-div(ng-controller='StoreController')
-	a(href='products') All products 
+div(ng-controller='ProductsController')
+	a(href='products/show') All products 
 	ul(class="list-group", style='width:600px', class="pull-center")
 		li(class="list-group-item", ng-repeat="product in products | orderBy:'price'")
 			h3(product-title)
