--- a/views/index.jade
+++ b/views/index.jade
@@ -5,11 +5,13 @@ block body
     h2 GemStore
     ul.menu
       li
-        a(href='products') All products
+        a(href='/') Main Page
+      li
+        a(href='products/show') All products
       li(ng-repeat="category in categories")
-        a(href='products/{{category.name}}') {{category.name}}   
+        a(href='products/show/{{category.name}}') {{category.name}}   
       li(ng-repeat="site in sites")
-        a(href='site/{{site.title}}') {{site.title}}     
+        a(href='/{{site.title}}') {{site.title}}     
 
     div(ng-view) 
 
