--- a/views/partials/product-title.jade
+++ b/views/partials/product-title.jade
@@ -1,3 +1,3 @@
-a(href='product/{{product._id}}') {{product.name}}
+a(href='product/show/{{product._id}}') {{product.name}}
 em(class="pull-right")
 	{{product.price | currency}}
