--- a/views/partials/templates/product-title.jade
+++ b/views/partials/templates/product-title.jade
@@ -1,3 +1,3 @@
-{{product.name}}
+a(href='product/show/{{product._id}}/{{product.name}}') {{product.name}}
 em(class="pull-right")
 	{{product.price | currency}}
