--- a/views/partials/product.jade
+++ b/views/partials/product.jade
@@ -1,7 +1,8 @@
 div(ng-controller='StoreControllerOne')
-	a(href='products/show') All products > 
-	a(href='products/show/{{product.category}}') {{product.category}} > 
-	a(href='product/show/{{product._id}}') {{product.name}}
+	.categories
+		a(href='products/show') All products > 
+		a(href='products/show/{{product.category}}') {{product.category}} > 
+		a(href='product/show/{{product._id}}') {{product.name}}
 	ul(class="list-group", style='width:600px', class="pull-center")
 		h3(product-title)
 		section(product-gallery, ng-controller="GalleryController")
