--- a/views/index.jade
+++ b/views/index.jade
@@ -20,12 +20,15 @@ block body
         | Angular seed app: v
         span(app-version)
 
-  script(src='js/lib/angular/angular.js')
-  script(src='js/lib/angular/angular-resource.js')
-  script(src='js/lib/angular/angular-route.js')
+  script(src='js/lib/angular/angular.min.js')
+  script(src='js/lib/angular/angular-resource.min.js')
+  script(src='js/lib/angular/angular-route.min.js')
   script(src='js/lib/angular/textAngular.js')
   script(src='js/lib/angular/textAngular-sanitize.js')
-  script(src='js/lib/angular/textAngularSetup.js')  
+  script(src='js/lib/angular/textAngularSetup.js')
+  script(src='js/lib/angular/ui-bootstrap-tpls-0.11.0.min.js')
+  script(src='js/lib/jquery-1.11.1.min.js')
+  script(src='js/bootstrap.min.js')  
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
