--- a/views/partials/admin/sites.jade
+++ b/views/partials/admin/sites.jade
@@ -1,13 +1,19 @@
 div(ng-controller='AdminControllerSites')
-	div(class="form-group")
-		form
-			h3 Add Site 
-			input(type="text", class="form-control input-lg text-center", placeholder="Name", ng-model="formSite.title")
-			div(class="container app")
-				div(text-angular="text-angular", name="htmlcontent", ng-model="formSite.content", ta-disabled='disabled')
-			button(type="submit", class="btn btn-primary btn-lg", ng-click="addSite()") Add
+	div(class="col-sm-8 col-sm-offset-2 text-center")
+		button(class="btn btn-default", ng-click="isCollapsedAdd = !isCollapsedAdd", ng-show="isCollapsedAdd") Open new Site form
+		button(class="btn btn-default", ng-click="isCollapsedAdd = !isCollapsedAdd", ng-hide="isCollapsedAdd") Hide new Site form
+		div(class="form-group", collapse="isCollapsedAdd")
+			form
+				h3 Add Site 
+				input(type="text", class="form-control input-lg text-center", placeholder="Name", ng-model="formSite.title")
+				div
+					div(text-angular="text-angular", name="htmlcontent", ng-model="formSite.content", ta-disabled='disabled')
+				button(type="submit", class="btn btn-primary btn-lg", ng-click="addSite()") Add
 
+		<br>
 		ul(class="list-group", style='width:600px', class="pull-center")
 			li(class="list-group-item", ng-repeat="site in sites")
 				{{site.title}}
 				a(href class="pull-right", ng-click="deleteSite(site._id)") x <br>
+
+	
