--- a/views/partials/admin/products.jade
+++ b/views/partials/admin/products.jade
@@ -8,59 +8,48 @@ div(ng-controller='AdminControllerProducts')
 				input(type="text", class="form-control input-lg text-center", placeholder="Name", ng-model="formData.name")
 				input(input type="number", step="any",  class="form-control input-lg text-center", placeholder="Price", ng-model="formData.price")
 				input(input type="text", class="form-control input-lg text-center", placeholder="Description", ng-model="formData.description")
-				select(ng-model="formData.category", required)
+				select(ng-click="refreshCategories()", ng-model="formData.category", required)
 					option(ng-repeat="category in categories", value="{{category.name}}", class="form-control input-lg text-center") {{category.name}} 
+				a(href ng-click="refreshCategories()") Refresh Categories <br>
 				button(type="submit", class="btn btn-primary btn-lg") Add
 						
 
 		
 		ul(class="list-group", style='width:600px', class="pull-center")
-			li(class="list-group-item", ng-repeat="product in products | orderBy:'price'")
-				a(href  ng-click="stopEditProduct(product._id)") Preview 
-				a(href  ng-click="startEditProduct(product._id)") Edit 
-				
-				section(ng-controller="AdminEditPanelController")
-				
-					ul(class="nav nav-pills")
-						li(ng-class="{ active:isSelected(1) }")
-							a(href ng-click="selectTab(1)") Preview
-						li(ng-class="{ active:isSelected(2) }") 
-							a(href ng-click="selectTab(2)") Edit 
-
+			li(class="list-group-item text-left", ng-repeat="product in products | orderBy:'price'")			
+				{{product.name}} ({{product.category}})
+				.pull-right
+					a(href ng-click="isCollapsedShow[$index] = false", ng-show="isCollapsedShow[$index]") Show preview  
+					a(href ng-click="isCollapsedShow[$index] = true", ng-hide="isCollapsedShow[$index]") Hide preview 
+					a(href ng-click="startEditProduct(product._id, $index)", ng-show="isCollapsedEdit[$index]") Edit 
+					a(href ng-click="isCollapsedEdit[$index] = true", ng-hide="isCollapsedEdit[$index]") Close (Edit) 
+					a(href ng-click="deleteProduct(product._id)") Delete 				
 					
-					div(class="panel", ng-show="isSelected(1)")
-						h3(product-title)
-						section(product-gallery, ng-controller="GalleryController")
-						section(product-panels, ng-controller="PanelController")
+				div(style='width:500px', collapse="isCollapsedShow[$index]")
+					h3(product-title)
+					section(product-gallery, ng-controller="GalleryController")
+					section(product-panels, ng-controller="PanelController")
 					
-					div(class="panel", ng-show="isSelected(2)")
-						a(href class="pull-right", ng-click="deleteProduct(product._id)") x <br>
 
-						a(href ng-click="startEditProduct(product._id)") Change parameters
-						div(class="panel", ng-show="editing")
-							form								
-								input(type="text", class="form-control input-lg text-center", value="{{product.name}}", ng-model="formEdit.name")
-								input(input type="number", step="any",  class="form-control input-lg text-center", value="{{product.price}}", ng-model="formEdit.price")
-								input(input type="text", class="form-control input-lg text-center", value="{{product.description}}", ng-model="formEdit.description")
-								select(ng-model="formEdit.category", ng-click="getCategories", required)
-									option(ng-selected="{{category.name == product.category}}", ng-repeat="category in categories", value="{{category.name}}") {{category.name}}
-								button(type="submit", class="btn btn-primary btn-lg", ng-click="editProduct(product)") Edit
-							<br>
-						div(class="panel", ng-hide="editing")
-							form
-								{{product.name}}<br>
-								{{product.price}}<br>
-								{{product.description}}<br>
-								{{product.category}}<br>
-							<br>
+				div(class="form-group", collapse="isCollapsedEdit[$index]") 
+					form								
+						input(type="text", class="form-control input-lg text-center", value="{{product.name}}", ng-model="formEdit.name")
+						input(input type="number", step="any",  class="form-control input-lg text-center", value="{{product.price}}", ng-model="formEdit.price")
+						input(input type="text", class="form-control input-lg text-center", value="{{product.description}}", ng-model="formEdit.description")
+						select(ng-model="formEdit.category", ng-click="refreshCategories()", required)
+							option(ng-selected="{{category.name == product.category}}", ng-repeat="category in categories", value="{{category.name}}") {{category.name}}
+						a(href ng-click="refreshCategories()") Refresh Categories <br>
+						button(type="submit", ng-click="editProduct(product)") Edit
+						button(type="submit", ng-click="isCollapsedEdit[$index] = true") Close
+						<br>
 
-						form
-							input(type="file", accept="image/*", image="image", onchange="angular.element(this).scope().imagesChanged(this)", multiple)
-							//input(ng-model="formData.image",  type="file", accept="image/*", image="image", onchange="angular.element(this).scope().imagesChanged(this)", multiple)
-							li(ng-repeat="file in files") {{file.name}}
-							button(ng-click="addImages(product._id)") Upload
-						
-						div(class="list-group-item", ng-repeat="image in product.images")
-							a(href class="pull-right", ng-click="deleteImage(product._id, image)") x <br>
-							{{image}} 
-							img(ng-src="./images/{{image}}", height="100px", width="100px")	
+					form
+						input(type="file", accept="image/*", image="image", onchange="angular.element(this).scope().imagesChanged(this)", multiple)
+						//input(ng-model="formData.image",  type="file", accept="image/*", image="image", onchange="angular.element(this).scope().imagesChanged(this)", multiple)
+						li(ng-repeat="file in files") {{file.name}}
+						button(ng-click="addImages(product._id)") Upload
+				
+					div(class="list-group-item", ng-repeat="image in product.images")
+						a(href class="pull-right", ng-click="deleteImage(product._id, image)") x <br>
+						{{image}} 
+						img(ng-src="./images/{{image}}", height="100px", width="100px")	
