--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(ng-app="myApp",ng-controller='AppCtrl')
 		meta(charset='utf8')
 		base(href='/')
 		title(ng-bind="Page.title()+Page.title2()") Loading...
+		meta(name="description", content="Page.description()")
 		//title {{Page.title()}}
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
