--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,17 +25,17 @@ ul {
     margin:20px 0;
 }
 
-.view {
-    top:101px;
+main {
+    /*top:101px;*/
     position: relative;
+    z-index: 0;
 }
 
-.topMenu{
-    position:fixed;
+header {
+    /*position:fixed;*/
     top:0px;
     width:100%;
     height:100px;
-    z-index: 3;
     background-color: white;
 }
 
@@ -73,6 +73,23 @@ ul {
 .menu > li:nth-child(1):before {
   content: "";
   padding: 0;
+}
+
+.logo {
+
+}
+
+.hide {
+  display: none;
+}
+.fixed {
+  position:fixed;
+  z-index: 3;
+  background-color: white;
+  width:100%;
+}
+.viewscroll {
+  top:51px;
 }
 
 
