--- a/views/index.jade
+++ b/views/index.jade
@@ -2,23 +2,26 @@ extends layout
 
 block body
   div(ng-controller='AppCtrl')
-    .topMenu  
-      h2 GemStore
-      ul.menu
-        li
-          a(href='/') Main Page
-        li
-          a(href='products/show') All products
-        li(ng-repeat="category in categories")
-          a(href='products/show/{{category.name}}') 
-            span(ng-bind="category.name")    
-        li(ng-repeat="site in sites", ng-hide="site.isIndex")
-          a(href='/{{site.title}}')
-            span(ng-bind="site.title") 
-    .view
-      div(ng-view) 
+    header
+      .logo(scroll ng-class="{hide:boolChangeClass}")
+        h2 GemStore
+      nav(scroll ng-class="{fixed:boolChangeClass}")
+        ul.menu
+          li
+            a(href='/') Main Page
+          li
+            a(href='products/show') All products
+          li(ng-repeat="category in categories")
+            a(href='products/show/{{category.name}}') 
+              span(ng-bind="category.name")    
+          li(ng-repeat="site in sites", ng-hide="site.isIndex")
+            a(href='/{{site.title}}')
+              span(ng-bind="site.title") 
+              
+    main(ng-view scroll ng-class="{viewscroll:boolChangeClass}")
 
-      div
+
+    footer
         | Angular seed app: v
         span(app-version)
 
