--- a/views/index.jade
+++ b/views/index.jade
@@ -5,19 +5,21 @@ block body
     header
       div(scroll ng-class="{hide:boolChangeClass}")
         .logo
-        //img(src="/images/gemstore-logo.png", class="logo")
       nav(scroll ng-class="{fixed:boolChangeClass}")
-        ul.menu
-          li
-            a(href='/') Main Page
-          li
-            a(href='products/show') All products
-          li(ng-repeat="category in categories")
-            a(href='products/show/{{category.name}}') 
-              span(ng-bind="category.name")    
-          li(ng-repeat="site in sites", ng-hide="site.isIndex")
-            a(href='/{{site.title}}')
-              span(ng-bind="site.title") 
+        .logoSmall 
+        ul
+          a(href='/') 
+            li Main Page
+          a(href='products/show') 
+            li All products
+
+          a(href='products/show/{{category.name}}')
+            li(ng-repeat="category in categories")            
+              span(ng-bind="category.name") 
+
+          a(href='/{{site.title}}')
+            li(ng-repeat="site in sites", ng-hide="site.isIndex")
+              span(ng-bind="site.title")  
               
     main(ng-view scroll ng-class="{viewscroll:boolChangeClass}")
 
