--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html(ng-app="myApp",ng-controller='AppCtrl')
 		//title {{Page.title()}}
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
+		link(rel='stylesheet', href='/css/loading-bar.css')
 		link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
 	body
 		block body
