--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,107 +1,1 @@
-@-webkit-keyframes opacityAnimation {
-  from {
-    opacity: 0.5; }
-
-  to {
-    opacity: 1; } }
-@keyframes opacityAnimation {
-  from {
-    opacity: 0.5; }
-
-  to {
-    opacity: 1; } }
-a:link {
-  text-decoration: none; }
-
-header, .fixed {
-  top: 0px;
-  height: 210px;
-  background-color: #3fa9f5;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%; }
-
-.logo {
-  height: 150px;
-  background: url("../images/gemstore-logo-normal.png");
-  background-size: auto 150px;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-.fixed {
-  position: fixed;
-  z-index: 3;
-  height: 60px;
-  background: url("../images/gemstore-logo-small.png");
-  background-repeat: no-repeat;
-  background-position: left;
-  background-color: #3fa9f5;
-  margin-top: auto;
-  -webkit-animation: opacityAnimation 2s;
-  animation: opacityAnimation 2s; }
-
-nav {
-  height: 60px; }
-  nav ul {
-    text-align: center;
-    font-size: 18px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-bottom: 0px; }
-    nav ul li {
-      display: inline-block;
-      background-color: white;
-      list-style-type: none;
-      color: #3fa9f5;
-      border-radius: 5px;
-      text-align: center;
-      padding: 7px;
-      transition: background-color 0.5s ease-in-out;
-      -moz-transition: background-color 0.5s ease-in-out;
-      -webkit-transition: background-color 0.5s ease-in-out; }
-    nav ul li:hover {
-      background-color: #ff0033;
-      color: white; }
-
-main {
-  padding-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-  width: 800px;
-  border-color: black;
-  border-width: 1px;
-  border-top-style: none;
-  border-right-style: solid;
-  border-bottom-style: none;
-  border-left-style: solid; }
-
-footer {
-  width: 100%;
-  height: 50px;
-  background-color: #3fa9f5;
-  color: white;
-  text-align: center;
-  padding: 5px; }
-
-.ng-invalid.ng-dirty {
-  border-color: none; }
-
-.ng-valid.ng-dirty {
-  border-color: #78fa89; }
-
-.ng-invalid.ng-pristine {
-  border-color: none; }
-
-.categories {
-  position: fixed;
-  top: 151px;
-  z-index: 2;
-  background-color: white;
-  display: none; }
-
-.hide {
-  display: none; }
-
-.viewscroll {
-  top: 215px; }
+@-webkit-keyframes opacityAnimation{from{opacity:0.5}to{opacity:1}}@keyframes opacityAnimation{from{opacity:0.5}to{opacity:1}}a:link{text-decoration:none}header,.fixed{top:0px;height:210px;background-color:#3fa9f5;margin-left:auto;margin-right:auto;width:100%}.logo{height:150px;background:url("../images/gemstore-logo-normal.png");background-size:auto 150px;background-repeat:no-repeat;background-position:center}.fixed{position:fixed;z-index:3;height:60px;background:url("../images/gemstore-logo-small.png");background-repeat:no-repeat;background-position:left;background-color:#3fa9f5;margin-top:auto;-webkit-animation:opacityAnimation 2s;animation:opacityAnimation 2s}nav{height:60px}nav ul{text-align:center;font-size:18px;padding-top:5px;padding-bottom:5px;margin-bottom:0px}nav ul li{display:inline-block;background-color:#fff;list-style-type:none;color:#3fa9f5;border-radius:5px;text-align:center;padding:7px;transition:background-color 0.5s ease-in-out;-moz-transition:background-color 0.5s ease-in-out;-webkit-transition:background-color 0.5s ease-in-out}nav ul li:hover{background-color:#f03;color:#fff}main{padding-top:5px;margin-left:auto;margin-right:auto;padding:20px;width:800px;border-color:#000;border-width:1px;border-top-style:none;border-right-style:solid;border-bottom-style:none;border-left-style:solid}footer{width:100%;height:50px;background-color:#3fa9f5;color:#fff;text-align:center;padding:5px}.ng-invalid.ng-dirty{border-color:none}.ng-valid.ng-dirty{border-color:#78fa89}.ng-invalid.ng-pristine{border-color:none}.categories{position:fixed;top:151px;z-index:2;background-color:#fff;display:none}.hide{display:none}.viewscroll{top:215px}
