--- a/views/admin.jade
+++ b/views/admin.jade
@@ -39,6 +39,7 @@ block body
 	script(src='js/lib/angular/textAngularSetup.js')
 	script(src='js/lib/angular/ui-bootstrap-tpls-0.11.0.min.js')
 	script(src='js/lib/angular/sortable.js')
+	script(src='js/lib/angular/loading-bar.js')
 	script(src='js/bootstrap.min.js')
 	script(src='js/app.js')
 	script(src='js/services.js')
